Scheduler ile islemek ucun ilk usulu yazdiq

--- a/ms-payment/src/main/resources/liquibase/1.0/changelog-0.0.2.yaml
+++ b/ms-payment/src/main/resources/liquibase/1.0/changelog-0.0.2.yaml
@@ -17,10 +17,10 @@ databaseChangeLog:
                   name: lock_until
                   type: timestamp
               - column:
-                  name: Locked_at
+                  name: locked_at
                   type: timestamp
               - column:
-                  name: Locked_by
+                  name: locked_by
                   type: varchar(256)
                   constraints:
                     nullable: false
