Mentiq transferMonet metodunda yazildi ve artiq islene biler

--- a/ms-users/src/main/resources/application.yaml
+++ b/ms-users/src/main/resources/application.yaml
@@ -16,3 +16,6 @@ spring:
     show-sql: true
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml #here we give the location of changelog file that store the location of the changesets
+
+urls:
+  ms-currencies: http://localhost:7575/currencies
